Add selectable schedule sync targets
